test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_10.k
schema _Data:
    name: str

schema _Data:
    name: str
